# bevy-inspector-ui

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
crates/bevy-inspector-ui/: Cargo.toml
crates/bevy-inspector-ui-derive/: Cargo.toml
crates/bevy-inspector-ui-derive/src/: attributes.rs  lib.rs
crates/bevy-inspector-ui/src/: lib.rs  restricted_world_view.rs  utils.rs
crates/bevy-inspector-ui/src/inspector_options/: default_options.rs  mod.rs  std_options.rs
crates/bevy-widgets/: Cargo.toml
crates/bevy-widgets/examples/: custom_button.rs  multi_buttons.rs  numeric_field.rs  single_button.rs  single_line_text.rs
crates/bevy-widgets/src/: buttons.rs  clipboard.rs  cursor.rs  focus.rs  lib.rs
crates/bevy-widgets/src/buttons/: builder.rs  constants.rs  helpers.rs  mod.rs  systems.rs
crates/bevy-widgets/src/input_fields/: builder.rs  constants.rs  mod.rs  systems.rs
crates/bevy-widgets/src/input_fields/components/: mod.rs  numeric.rs  text.rs
crates/bevy-widgets/src/text_field/: builder.rs  constants.rs  mod.rs  systems.rs
