[package]
name = "bevy-inspector-ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["bevy_pbr", "bevy_render"]
bevy_pbr = ["dep:bevy_pbr"]
bevy_render = ["dep:bevy_render", "dep:bevy_core_pipeline",]
highlight_changes = []

[dependencies]
bevy-inspector-ui-derive = { version = "0.1.0", path = "../bevy-inspector-ui-derive" }
bevy_app = { version = "0.15.0-rc.3" }
bevy_asset = { version = "0.15.0-rc.3" }
bevy_color = { version = "0.15.0-rc.3" }
bevy_core = { version = "0.15.0-rc.3" }
bevy_ecs = { version = "0.15.0-rc.3" }
bevy_hierarchy = { version = "0.15.0-rc.3" }
bevy_log = { version = "0.15.0-rc.3" }
bevy_math = { version = "0.15.0-rc.3" }
bevy_reflect = { version = "0.15.0-rc.3" }
bevy_state = { version = "0.15.0-rc.3" }
bevy_text = { version = "0.15.0-rc.3" }
bevy_time = { version = "0.15.0-rc.3" }
bevy_ui = { version = "0.15.0-rc.3", features = ["bevy_text"]  }
bevy_utils = { version = "0.15.0-rc.3" }
bevy_window = { version = "0.15.0-rc.3" }

bevy_render = { version = "0.15.0-rc.3",  optional = true }
bevy_core_pipeline = { version = "0.15.0-rc.3",  optional = true }
bevy_pbr = { version = "0.15.0-rc.3",  optional = true }

bytemuck = "1.16.0"
image = { version = "0.24", default-features = false }
once_cell = "1.16"
pretty-type-name = "1.0"
smallvec = "1.10"

fuzzy-matcher = "0.3.7"