[package]
name = "bevy-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_asset = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_color = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_core = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_derive = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_input = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_log = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_math = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_picking = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_render = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_state = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_text = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_transform = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_time = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_ui = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648", features = ["bevy_text"] }
bevy_utils = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }
bevy_window = { git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648" }

arboard = {version = "3.4.1", features = ["image-data"] }

[dev-dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev = "bd0c74644fda1c6cbdd2524c2920e81fce063648"}