[package]
name = "bevy-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "b4e04f9d9f4e5954b07514db893b7b54367bce44", default-features = false, features = [
    "bevy_render",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_winit",
]}

arboard = {version = "3.4.1", features = ["image-data"] }
