[package]
name = "bevy-widgets"
version = "0.1.0"
edition = "2021"

[features]
default = ["x11"]
x11 = ["bevy/x11"]
wayland = ["bevy/wayland"]

[dependencies]
bevy = { version = "0.15.0", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_window",
]}

arboard = {version = "3.4.1", features = ["image-data"] }
num-traits = "0.2.19"

[dev-dependencies]
bevy = { version = "0.15.0", default-features = true }